--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.10",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -22,34 +21,30 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
-    "@types/tailwindcss": "^3.1.0",
-    "ai": "^4.0.20",
+    "ai": "^2.2.35",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.2",
+    "next": "14.1.0",
     "next-themes": "^0.4.4",
-    "openai": "^4.77.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "openai": "^4.28.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.5.5",
-    "vercel": "^39.2.2"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@shadcn/ui": "^0.0.4",
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.2",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
